feat: add openapi generate
